--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,15 @@
     display: block;
     margin-bottom: 10px;
   }
+
+  .icon-26{
+    content: url('chatgpt.ico');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin-bottom: 10px;
+  }
   
 
   /******************************************************
