--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,15 @@
     display: block;
     margin-bottom: 10px;
   }
+
+  .icon-27{
+    content: url('ObsidianPublishLogo.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin-bottom: 10px;
+  }
   
 
   /******************************************************
